--- a/gb/21/9/30/n13271747.md
+++ b/gb/21/9/30/n13271747.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ymotvy337/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ymotvy337/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ymotvy337/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ymotvy337/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ymotvy337/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ymotvy337/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ymotvy337/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ymotvy337/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ymotvy337/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ymotvy337/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ymotvy337/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ymotvy337/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ymotvy337/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ymotvy337/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ymotvy337/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ymotvy337/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ymotvy337/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ymotvy337/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ymotvy337/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ymotvy337/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ymotvy337/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ymotvy337/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ymotvy337/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ymotvy337/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ymotvy337/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ymotvy337/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ymotvy337/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ymotvy337/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ymotvy337/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ymotvy337/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ymotvy337/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ymotvy337/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ymotvy337/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ymotvy337/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ymotvy337/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ymotvy337/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ymotvy337/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ymotvy337/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ymotvy337/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ymotvy337/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ymotvy337/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ymotvy337/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ymotvy337/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ymotvy337/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ymotvy337/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ymotvy337/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ymotvy337/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>组图：挺直腰板 双腿截肢男子活出精彩人生</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13271755-Kasey-McAllister-1200x720-600x400.jpg" />
 <h6>励志演说家凯西?麦卡利斯特有了自己的家庭和孩子。自从中共病毒爆发以来，他一直在父亲的车行里当机械师。（凯西?麦卡利斯特提供）
 </h6>
 <hr>
-	<p>【大纪元2021年09月30日讯】（英文大纪元Epoch Inspired Staff报导／云川编译）凯西?麦卡利斯特（Kacey McAllister）6岁的时候遭遇一场严重的<ahref="https://github.com/ymotvy337/djy/blob/master/gb/tag/%E8%BD%A6%E7%A5%B8.md#1">车祸</a>，这彻底地改变了他的人生道路。</p>
+	<p>【大纪元2021年09月30日讯】（英文大纪元Epoch Inspired Staff报导／云川编译）凯西?麦卡利斯特（Kacey McAllister）6岁的时候遭遇一场严重的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%BD%A6%E7%A5%B8.md#1">车祸</a>，这彻底地改变了他的人生道路。</p>
 <p>麦卡利斯特住在怀俄明州（Wyoming），当时他和父母到犹他州（Utah）探望亲戚。据他后来回忆说，当时他们正在过马路，他就听到父母跟他说，“有两辆汽车开过来了，还有一辆卡车。”</p>
 <p>凯西等两辆汽车开过去后就跑上了马路，结果被迎面而来的卡车撞倒了。更糟的是，这辆卡车不是普通的皮卡，而是一辆18轮油罐车。</p>
-<p>“我当时想躲开，但油罐车还是撞到了我的腿，并从我的腿上碾了过去。”现年35岁的凯西告诉《大纪元时报》：“当油罐车终于停下来时，我的一条腿已经完全被截断了。另一条腿也严重受伤，后来在医院里被<ahref="https://github.com/ymotvy337/djy/blob/master/gb/tag/%E6%88%AA%E8%82%A2.md#1">截肢</a>。”</p>
+<p>“我当时想躲开，但油罐车还是撞到了我的腿，并从我的腿上碾了过去。”现年35岁的凯西告诉《大纪元时报》：“当油罐车终于停下来时，我的一条腿已经完全被截断了。另一条腿也严重受伤，后来在医院里被<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%88%AA%E8%82%A2.md#1">截肢</a>。”</p>
 <figure id="attachment_13271769" aria-describedby="caption-attachment-13271769" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/09/id13271769-Kacey-childhoo.jpeg"><img class="size-large wp-image-13271769" src="https://i.epochtimes.com/assets/uploads/2021/09/id13271769-Kacey-childhoo-600x433.jpeg" alt="" width="600" b="433" /></a><figcaption id="caption-attachment-13271769" class="wp-caption-text">儿童时代的凯西?麦卡利斯特。（凯西?麦卡利斯特提供）</figcaption></figure>
-<p>现在的凯西是一名<ahref="https://github.com/ymotvy337/djy/blob/master/gb/tag/%E5%8A%B1%E5%BF%97%E6%BC%94%E8%AF%B4%E5%AE%B6.md#1">励志演说家</a>，并有了自己的家庭和孩子。自从中共病毒（武汉病毒、新冠病毒）爆发以来，他就一直在父亲的车行里当机械师。</p>
-<p>他回忆起<ahref="https://github.com/ymotvy337/djy/blob/master/gb/tag/%E8%BD%A6%E7%A5%B8.md#1">车祸</a>发生后，他被送往医院，并且得知了自己的状况。因为当时年龄尚小，他没有像很多人那样，面对失去<ahref="https://github.com/ymotvy337/djy/blob/master/gb/tag/%E5%8F%8C%E8%85%BF.md#1">双腿</a>而痛不欲生。</p>
+<p>现在的凯西是一名<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8A%B1%E5%BF%97%E6%BC%94%E8%AF%B4%E5%AE%B6.md#1">励志演说家</a>，并有了自己的家庭和孩子。自从中共病毒（武汉病毒、新冠病毒）爆发以来，他就一直在父亲的车行里当机械师。</p>
+<p>他回忆起<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%BD%A6%E7%A5%B8.md#1">车祸</a>发生后，他被送往医院，并且得知了自己的状况。因为当时年龄尚小，他没有像很多人那样，面对失去<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8F%8C%E8%85%BF.md#1">双腿</a>而痛不欲生。</p>
 <p>“当我从医院醒来后，我伸手想去摸我的腿，妈妈当时就在我身边。她说，‘是这样的凯西，你的腿不见了，你没有腿了。’我当时的反应就好像是，‘那好吧。’”他笑着回忆道。“然后我就躺了下来，那时的情况就是这样。”</p>
 <figure id="attachment_13271775" aria-describedby="caption-attachment-13271775" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/09/id13271775-kacey-spartan_43561.jpg"><img class="size-large wp-image-13271775" src="https://i.epochtimes.com/assets/uploads/2021/09/id13271775-kacey-spartan_43561-600x406.jpg" alt="" width="600" b="406" /></a><figcaption id="caption-attachment-13271775" class="wp-caption-text">（凯西?麦卡利斯特提供）</figcaption></figure>
 <p>不过，凯西在成长的过程中不可避免地遇到了许多挑战。在以后的数十年的岁月里，他逐渐学会了能帮助他克服困难的人生道理：永远挺直腰板，不要被生活中的挫折打败。</p>
@@ -31,11 +31,11 @@
 <p>后来，凯西对田径运动的爱好让他参加了马拉松，但他很快发现这个太容易了。凯西总是把别人认为他“做不成”的态度变成他“做得成”的动力。但很快他就面临着最糟糕的情形：自我否定。</p>
 <figure id="attachment_13271795" aria-describedby="caption-attachment-13271795" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/09/id13271795-Kacey-spartan_456.jpg"><img class="size-large wp-image-13271795" src="https://i.epochtimes.com/assets/uploads/2021/09/id13271795-Kacey-spartan_456-600x352.jpg" alt="" width="600" b="352" /></a><figcaption id="caption-attachment-13271795" class="wp-caption-text">（凯西?麦卡利斯特提供）</figcaption></figure>
 <figure id="attachment_13271800" aria-describedby="caption-attachment-13271800" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/09/id13271800-kacey-spartan_3.jpg"><img class="size-large wp-image-13271800" src="https://i.epochtimes.com/assets/uploads/2021/09/id13271800-kacey-spartan_3-600x600.jpg" alt="" width="600" b="600" /></a><figcaption id="caption-attachment-13271800" class="wp-caption-text">（凯西?麦卡利斯特提供）</figcaption></figure>
-<p>他听说了斯巴达<ahref="https://github.com/ymotvy337/djy/blob/master/gb/tag/%E9%9A%9C%E7%A2%8D%E8%B5%9B.md#1">障碍赛</a>（Spartan obstacle race）。这是一项经常在美国举办的国际特许赛。凯西开始怀疑自己完成比赛的能力。</p>
+<p>他听说了斯巴达<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E9%9A%9C%E7%A2%8D%E8%B5%9B.md#1">障碍赛</a>（Spartan obstacle race）。这是一项经常在美国举办的国际特许赛。凯西开始怀疑自己完成比赛的能力。</p>
 <p>“没过多久，我就意识到，是自己在告诉自己：我做不到。所以我决定，‘好吧，我不知道我能不能做到，我真的不知道。但我要试一把。’”他说。</p>
-<p>他报名参加了这项艰巨的<ahref="https://github.com/ymotvy337/djy/blob/master/gb/tag/%E9%9A%9C%E7%A2%8D%E8%B5%9B.md#1">障碍赛</a>。尽管花了“天晓得多少时间”，他还是完成了整个比赛。此后，他前往各地参赛，从西雅图到夏威夷，成功挑战了35场斯巴达障碍赛。他的下一站在加利福尼亚州萨克拉门托（Sacramento）。</p>
+<p>他报名参加了这项艰巨的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E9%9A%9C%E7%A2%8D%E8%B5%9B.md#1">障碍赛</a>。尽管花了“天晓得多少时间”，他还是完成了整个比赛。此后，他前往各地参赛，从西雅图到夏威夷，成功挑战了35场斯巴达障碍赛。他的下一站在加利福尼亚州萨克拉门托（Sacramento）。</p>
 <figure id="attachment_13271802" aria-describedby="caption-attachment-13271802" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/09/id13271802-Kacey-mechanic_4561.jpg"><img class="size-large wp-image-13271802" src="https://i.epochtimes.com/assets/uploads/2021/09/id13271802-Kacey-mechanic_4561-600x406.jpg" alt="" width="600" b="406" /></a><figcaption id="caption-attachment-13271802" class="wp-caption-text">（凯西?麦卡利斯特提供）</figcaption></figure>
-<p>凯西还成为了一名<ahref="https://github.com/ymotvy337/djy/blob/master/gb/tag/%E5%8A%B1%E5%BF%97%E6%BC%94%E8%AF%B4%E5%AE%B6.md#1">励志演说家</a>，用他“永远挺直腰板”迎接生活挑战的人生哲学激励他人。</p>
+<p>凯西还成为了一名<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8A%B1%E5%BF%97%E6%BC%94%E8%AF%B4%E5%AE%B6.md#1">励志演说家</a>，用他“永远挺直腰板”迎接生活挑战的人生哲学激励他人。</p>
 <p>由于疫情缘故无法组织大型集会，凯西又找到了一份新工作，在父亲的车行担任机械师。</p>
 <p>“我必须想办法做不同的工作。很多像轮胎机这样的机器都是为有脚的人设计的，你必须用脚操作。”他说。</p>
 <figure id="attachment_13271806" aria-describedby="caption-attachment-13271806" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/09/id13271806-Kacey-mechanic_1.jpg"><img class="size-large wp-image-13271806" src="https://i.epochtimes.com/assets/uploads/2021/09/id13271806-Kacey-mechanic_1-600x474.jpg" alt="" width="600" b="474" /></a><figcaption id="caption-attachment-13271806" class="wp-caption-text">（凯西?麦卡利斯特提供）</figcaption></figure>
@@ -43,47 +43,46 @@
 <p>也许凯西最大的挑战是担任父亲的角色抚养孩子。“当谈到成就时，老实说，我最大的挑战之一是我的家庭。因为我有五个孩子，只要有孩子的人都知道他们有多难对付。”他补充道。</p>
 <p>“不过我有一个美好的家庭，一个支持我的妻子，还有孩子们。他们帮助我实现了这些了不起的人生目标。”</p>
 <figure id="attachment_13271815" aria-describedby="caption-attachment-13271815" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/09/id13271815-Kacey-with-family.jpeg"><img class="size-large wp-image-13271815" src="https://i.epochtimes.com/assets/uploads/2021/09/id13271815-Kacey-with-family-600x450.jpeg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-13271815" class="wp-caption-text">（凯西?麦卡利斯特提供）</figcaption></figure>
-<p>责任编辑：韩玉?#</p>
+<p>责任编辑：韩玉?#◇</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/20/12/26/n12646477.md#1">昔日瘾君子变身公众演说家 励志故事热传</a></li>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/21/3/11/n12804837.md#1">美国励志演说家：改变我人生的一句话</a></li>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/21/7/5/n13068304.md#1">励志 美13岁少年经营卖柴生意且成绩优异</a></li>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/21/9/23/n13254736.md#1">励志 加州29岁男四肢瘫痪 学会用嘴画画</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/12/26/n12646477.md#1">昔日瘾君子变身公众演说家 励志故事热传</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/3/11/n12804837.md#1">美国励志演说家：改变我人生的一句话</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/7/5/n13068304.md#1">励志 美13岁少年经营卖柴生意且成绩优异</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/9/23/n13254736.md#1">励志 加州29岁男四肢瘫痪 学会用嘴画画</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/12/n10708622.md#1" target="_blank">陋兰：隐瞒和谎言，极权身体里的黄色血液</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/8/n11308403.md#1" target="_blank">我的父亲</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/11/n10048859.md#1" target="_blank">《苦菜花》人物原型的真实人生（5）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/22/n10927324.md#1" target="_blank">跨国企业总经理修炼法轮功 受益无穷</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/21/9/23/n13254494.md#1">跨越20亿年的史前文明 加蓬核反应堆群释疑</a></li>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/21/9/24/n13258207.md#1">【百年真相】坠落凡间七仙女 严凤英文革生死劫</a></li>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/21/9/28/n13266900.md#1">【百年真相】《苦菜花》背后的真实故事</a></li>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/21/9/23/n13256121.md#1">【未解之谜】不可思议的跨国灵魂互换案</a></li>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/21/9/23/n13256297.md#1">挽救黄金家族、中兴蒙古汗国的满都海斯琴</a></li>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/21/9/29/n13269873.md#1">【有冇搞错】从大停电看官员躺平</a></li>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/21/9/29/n13270072.md#1">【时事纵横】岸田将成日首相 中共先上紧箍咒？</a></li>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/21/9/29/n13269584.md#1">【财商天下】孟晚舟“获释”谁是最大输家</a></li>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/21/9/28/n13265398.md#1">【拍案惊奇】习亲自处理孟晚舟案 传向任正非承诺</a></li>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/21/9/28/n13266167.md#1">小猫每天陪7岁小主人等校车 再目送她离去</a></li>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/21/9/27/n13263282.md#1">【翻墙必看】孟晚舟回国内幕惊人 破绽显露</a></li>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/21/9/27/n13264870.md#1">被“三国”周瑜后代认亲 周润发曾亲切回应</a></li>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/21/9/28/n13267480.md#1">49岁黎姿带女儿挤地铁 气质温婉似少女</a></li>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/21/9/28/n13267702.md#1">林依晨证实已怀孕 预产期是10月底</a></li>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/21/9/30/n13270234.md#1">受邀参加大陆直播卖货 赵雅芝全程尴尬引热议</a></li>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/21/9/27/n13265083.md#1">刘德华庆60岁生日 自曝隔离21天吃睡也不胖</a></li>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/21/9/28/n13266167.md#1">小猫每天陪7岁小主人等校车 再目送她离去</a></li>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/21/9/29/n13268154.md#1">美国女歌手曾目击UFO 世界观彻底改变</a></li>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/21/9/20/n13247426.md#1">中医教你3个月减10%体重 注意1点更事半功倍</a></li>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/21/9/28/n13265507.md#1">新冠疫苗第三剂必要吗？专家示警两大副作用</a></li>
-<li><a href="https://github.com/ymotvy337/djy/blob/master/gb/21/9/28/n13267409.md#1">癌症最大原因是饮食 一表看懂不同癌症风险</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752381.md#1">【菁英论坛】应付内外困局 中共攻台视政治需求</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751943.md#1">【新闻看点】特斯拉裁员10% 全球大衰退将至？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752419.md#1">专家：中共核检是干柴烈火 随时引爆疫情</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752937.md#1">林志玲47岁高龄当妈 写给儿子的话令人动容</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752955.md#1">金马影帝万梓良现身小商演 身体欠安需2人搀扶</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752111.md#1">避免旅行时多花冤枉钱 专家教你几招</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752361.md#1">减肥新进展 香港浸大研究发现减少饮食方法</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ymotvy337/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ymotvy337/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/30/n13271747.htm">组图：挺直腰板 双腿截肢男子活出精彩人生</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/30/n13271747.htm">组图：挺直腰板 双腿截肢男子活出精彩人生</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ymotvy337/djy/blob/master/gb/21/9/30/n13271747.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ymotvy337/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ymotvy337/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ymotvy337/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ymotvy337/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ymotvy337/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ymotvy337/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ymotvy337/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ymotvy337/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ymotvy337/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ymotvy337/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ymotvy337/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ymotvy337/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ymotvy337/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ymotvy337/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ymotvy337/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ymotvy337/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ymotvy337/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ymotvy337/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ymotvy337/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ymotvy337/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ymotvy337/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ymotvy337/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ymotvy337/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ymotvy337/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ymotvy337/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ymotvy337/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ymotvy337/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ymotvy337/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ymotvy337/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ymotvy337/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ymotvy337/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ymotvy337/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ymotvy337/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ymotvy337/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ymotvy337/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ymotvy337/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ymotvy337/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ymotvy337/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ymotvy337/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ymotvy337/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ymotvy337/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ymotvy337/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ymotvy337/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ymotvy337/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ymotvy337/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ymotvy337/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ymotvy337/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ymotvy337/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/21/9/30/n13271747.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
